<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/apiKeyFragment">

    <fragment
        android:id="@+id/apiKeyFragment"
        android:name="com.scascan.app.ui.setup.ApiKeyFragment"
        android:label="@string/setup_title">
        <action
            android:id="@+id/action_apiKeyFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/apiKeyFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.scascan.app.ui.home.HomeFragment"
        android:label="@string/app_name">
        <action
            android:id="@+id/action_homeFragment_to_cameraFragment"
            app:destination="@id/cameraFragment" />
        <action
            android:id="@+id/action_homeFragment_to_barcodeScanFragment"
            app:destination="@id/barcodeScanFragment" />
        <action
            android:id="@+id/action_homeFragment_to_searchFragment"
            app:destination="@id/searchFragment" />
        <action
            android:id="@+id/action_homeFragment_to_apiKeyFragment"
            app:destination="@id/apiKeyFragment" />
    </fragment>

    <fragment
        android:id="@+id/cameraFragment"
        android:name="com.scascan.app.ui.camera.CameraFragment"
        android:label="@string/label_camera">
        <action
            android:id="@+id/action_cameraFragment_to_nutritionResultFragment"
            app:destination="@id/nutritionResultFragment" />
    </fragment>

    <fragment
        android:id="@+id/barcodeScanFragment"
        android:name="com.scascan.app.ui.scan.BarcodeScanFragment"
        android:label="@string/label_barcode_scan">
        <action
            android:id="@+id/action_barcodeScanFragment_to_nutritionResultFragment"
            app:destination="@id/nutritionResultFragment" />
    </fragment>

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.scascan.app.ui.search.SearchFragment"
        android:label="@string/label_search">
        <action
            android:id="@+id/action_searchFragment_to_nutritionResultFragment"
            app:destination="@id/nutritionResultFragment" />
    </fragment>

    <fragment
        android:id="@+id/nutritionResultFragment"
        android:name="com.scascan.app.ui.result.NutritionResultFragment"
        android:label="@string/label_result">
        <argument
            android:name="nutritionFacts"
            app:argType="com.scascan.app.data.model.NutritionFacts" />
    </fragment>

</navigation>
